--- a/index.html
+++ b/index.html
@@ -3,3 +3,18 @@ layout: default
 title: Home
 permalink: /
 ---
+<div class="main-page">
+  <h1>The Scottish Storyline Method</h1>
+
+  <h3>A note from Jeff Creswell:</h3>
+  <h4>Registration available for the Portland and Prineville classes.See link below!</h4>
+
+  <h3>Storyline Courses</h3>
+  <h4>Storyline I: An Introduction & Storyline Revisited</h4>
+
+  <p>Are you ready to learn what makes the Storyline Method so successful in the classroom?
+
+  The Storyline I: An Introduction course is for K-12 teachers who wish to learn how to integrate curriculum using the Storyline method.  Participants will experience a Storyline unit both as a student in the process, as well as observer of the teaching method.  Explore how and why the Storyline method motivates students to learn as they become their own ‘meaning makers.’
+
+  Storyline Revisited is for you if you’d like a refresher!  This course is run concurrently with the introductory course and provides a refresher for people who are looking for the support and would like to create a new Storyline topic.</p>
+</div>
