add content to every page

--- a/about.html
+++ b/about.html
@@ -3,3 +3,32 @@ layout: default
 title: About
 permalink: /about/
 ---
+
+<h2>What is the Storyline Method?</h2>
+<p>Storyline is a structured approach to learning and teaching that was developed in Scotland It builds on the key principle that learning, to be meaningful, has to be memorable, and that by using learner's enthusiasm for story-making, the classroom, the teacher's role and learning can be transformed. Storyline is a strategy for developing the curriculum as an integrated whole. It provides an opportunity for active learning and reflection as essential parts of effective learning and teaching. At the same time it develops in learners a powerful sense of ownership of their learning.
+
+
+
+-The Scottish Consultative Council on the Curriculum</p>
+
+<h2>Who is Storyline Design?</h2>
+
+<p>Jeff Creswell is an experienced classroom teacher and staff developer who has been working with the Storyline method since it was first brought to the United States in 1989. He is the author of Creating Worlds, Constructing Meaning: The Scottish Storyline Method, published by Heinema
+nn Books. He has trained teachers throughout the United States and Europe, is a member of the Golden Circle, and is on the leadership team for Storyline International. Jeff recently retired from classroom teaching after 32 years. In addition to his work with Storyline Design, he is a facilitator for the Center for Courage and Renewal, an organization founded by Parker Palmer, working with educators and other people in the helping professions.</p>
+
+<p>Eileen Vopelak has been an educator for 40 years. She received her master’s degree in Elementary Education and has both Administrative and TESOL credentials. She has been an elementary school teacher, staff developer, student teacher supervisor, and adjunct professor. Eileen was introduced to the Storyline Method in 1991 and has since been using the method and sharing it with teachers in California and beyond. In addition to being a Storyline instructor, she is an adjunct professor at Santa Barbara City College where she teaches English as a Second Language.</p>
+
+<p>Helen Crandell is an educator in Portland with over 30 years experience. She holds a bachelor’s degree in Elementary Education from Oregon State University and master’s degree in Educational Administration from Portland State University. Helen has been a Storyline instructor since 1994. She has facilitated staff development workshops in Oregon, Ohio and Tennessee. Helen was a presenter at the 2000 and 2003 International Storyline Conferences in Denmark, the 2008 Nordic Storyline Conference in Sweden, and the 2015 International Storyline Conference in Glasgow. Helen currently supervises student teachers at Concordia University.</p>
+
+<p>Roger Fisher is an educator and presenter with 20 years experience working with children and adults. He has a master’s degree from the University of Oregon and is a veteran Storyline Design instructor with expertise in integrated curriculum design and implementation. Rog
+
+
+er has worked with children ages 7-14 in self-contained classrooms, middle schools, after school programs, and summer challenge academies. He currently teaches gifted and talented children in grades 2-5 in a district-wide pull-out model and teaches math and science methods at the college level. Storyline is his favorite model for creating exciting and relevant learning for young people.</p>
+
+<p>J.J. Howard has been teaching elementary students for over twenty years. He graduated from Western Oregon University with a bachelor’s degree in elementary education and interdisciplinary studies. He has been a Storyliner since 1997.  J.J. attended the International Storyline Conference in Glasgow, Scotland in 2006 and presented at the 2009 and 2015 conferences.  J.J. currently teaches a 2nd and 3rd grade blend at Highland School, a Storyline magnet school in Bend, Oregon (www.bend.k12.or.us/highland). When he is not teaching, J.J. enjoys running, science fiction, travel and family.</p>
+
+<p>Misha Therrian has been using the Storyline method to teach elementary students for over 15 years. She attended Oregon State University, Charles Sturt University in Bathurst, Australia, and holds a Masters degree from Eastern Oregon University in elementary education. Misha was a presenter at the International Storyline Conferences in 2009, 2015 and 2018. She and JJ Howard have worked collaboratively to provide Storyline workshops for teachers in the Bend LaPine School District. Misha currently teaches a 2nd and 3rd grade blend at Highland Elementary, a Storyline magnet school, in Bend, Oregon.</p>
+
+<p>Jan Zuckerman has been an educator in Portland for more than 30 years. She co-founded the Environmental Middle School, now Sunnyside Environmental School and has been an avid Storyline teacher for over 20 years. Like the three sisters garden, Jan believes that service learning and place based education naturally fit into the Storyline model, and is the best way to cultivate learning in children. She has worked with students grades 4-8, and is a firm believer in the magic of Storyline. Jan has presented at the International Storyline Conferences in Portland and Iceland and attended the International Conferences in Denmark and Scotland. She is a Storyline instructor and regularly steps into the roles of old ladies, giantologists, scientists and other characters whenever she has the opportunity.</p>
+
+<p>Maggie Byrkit has been an educator in Portland Public Schools for 15 years. She holds a bachelor's degree in biology from Amherst College, a Master's of Science in Forestry from Oregon State University, and a Master of Arts in Teaching from Concordia University.  Maggie is a regular presenter at International Storyline Conferences.  Over the past 10 years, she has written many original storyline topics, each with unique goals, such as engaging students in real-world scientific work, illuminating the plight of migrants, self-expression through poetry, and designing schools of the future.  Maggie currently teaches at ACCESS Academy, where she uses Storyline to help students grow in their interpersonal skills and critical thinking.   </p>
