--- a/articles.html
+++ b/articles.html
@@ -3,3 +3,43 @@ layout: default
 title: Articles
 permalink: /articles/
 ---
+
+<h3>Great Articles about the Storyline Method . . . . . .</h3>
+<p>How the Storyline Method came to be
+
+    Integrating Curriculum
+
+    The Topic Web and the Storyline Method
+
+    Answers to Questions about the Storyline Method
+
+    Why the Storyline Method Makes Sense
+
+    It’s the Principle of the Thing
+
+    Dragons vs. Elephants
+
+    The Riverkeepers Storyline Episodes</p>
+
+<h2>How the Storyline Method came to be... </h2>
+<p>The Storyline approach was first developed by a small group of staff tutors based in the Inservice Department of what was then Jordanhill College of Education, Glasgow, Scotland - now the Faculty of Education of the University of Strathclyde. People involved at that time were Steve Bell, Sallie Harkness and Fred Rendell.
+
+
+
+This approach to topic work in the Scottish Primary School came about as a result of recommendations that teachers adopt a more integrated approach to the curriculum which had, up until then, been divided into many small segments. Further recommendations proposed a more child centered approach to learning linked with less reliance on the use of inappropriate textbooks. The emphasis was to be on creating appropriate classroom contexts in which pupils would learn the specified skills and concepts and would acquire favorable attitudes to learning.
+
+
+
+The staff tutor group were given ample opportunity to work closely with class teachers and other school staff responsible for curriculum development. From this collaboration and over many years of experience and experiment the Storyline Approach was developed and disseminated through a variety of inservice courses all of a practical workshop type.
+
+
+
+The Storyline method provides a structure for planning classroom experience which gives the teacher the security of knowing what knowledge, skills and attitudes she/he intends pupils to acquire. It also provides practical implementation strategies which have proven workable with classes, groups and individuals. The approach is sequential, in the method, thus ensuring progression as the chosen topic unfolds. There is also, however, flexibility in that, as the Storyline process continues, the pupils' responses are an essential part of the development.
+
+
+
+A key feature of the approach is the very positive way in which it depends on and builds on pupils’ existing experience and knowledge. Also significant is the degree of pupil involvement, both imaginatively and in practical problem solving. The Storyline method poses problems and asks questions of pupils rather than giving them answers to questions they have never asked. The pupils and the teacher explore ideas together. The approach is essentially experiential and constructivist. It draws the curriculum together using the environment and social subjects as a stimulus to explore, using expressive arts and language as a means of discussing, describing and explaining. Research and reference skills are extended as pupils are encouraged to search for answers and information in various ways...orally, through viewing of slides, videotapes, etc., by use of data bases and through study of books, posters and photographs. As topics are developed pupils record their ideas, understandings and responses in visual and written formats thus creating powerful classroom displays as well as individual files of work. Both of these enable the process of review and evaluation when the storyline is completed.
+
+
+
+As the level of pupil commitment is increased parents may become involved in a number of positive ways, such as a visiting witness or “expert,” to take part in the celebration of the climax of a topic study, to assist and supervise on a visit out of school, to be a classroom helper during practical activities and to help create displays of pupils’ work.</p>
