--- a/contact.html
+++ b/contact.html
@@ -3,3 +3,29 @@ layout: default
 title: Contact
 permalink: /contact/
 ---
+
+<h1>Contact Us</h1>
+
+<p>Storyline Design - Oregon Office
+
+PMB 246
+
+333 S. State Street
+
+Lake Oswego, OR 97034</p>
+
+<p>Shelly Othus
+
+Email: storylinedesign@comcast.net</p>
+
+<p>Jeff Creswell
+
+Email: creswell@icloud.com</p>
+
+<p>Storyline Design - California Office
+
+Eileen Vopelak
+
+Phone: (805) 967-4386
+
+Email: eileenvopelak@gmail.com</p>
