--- a/courses.html
+++ b/courses.html
@@ -3,3 +3,37 @@ layout: default
 title: Courses
 permalink: /courses/
 ---
+
+<h2>Course Descriptions</h2>
+
+<p>
+"I value the sharing of the instructor's classroom expertise and the chance to experience all aspects of the Storyline method as a student and a teacher."
+
+- From a participant evaluation</p>
+
+<h3>Storyline I: An Introduction</h3>
+<p>Children learn best when curriculum is integrated. The Scottish Storyline method, developed thirty years ago in Glasgow, Scotland, uses the power of story to engage children and provide a meaningful context for teachers to deliver curriculum that mirrors real life. Storyline is an international methodology used in over a dozen countries around the world. The flexibility of the method allows teachers to meet the needs of all students in a way that is developmentally appropriate and child centered. This exciting way of working with children will reinvigorate your teaching and transform your classroom</p>
+
+<h3>Storyline I: Revisited</h3>
+<p>This course will provide a refresher for people who are looking for the support of working through a new Storyline topic and the opportunity to write a new topic with the support of Storyline trainers. This course runs concurrently with Storyline I: An Introduction.</p>
+
+<h3>Storyline II: Implementation and Design</h3>
+<p>This course is structured in monthly meetings as a support for teachers using the Storyline method. Special topics to include: art and frieze techniques, beginnings and endings, structures, different types of Storyline units, theory, evaluation and assessment, and designing new Storyline topics. *Prerequisite: Storyline I</p>
+
+<h3>Storyline III: Support and Development</h3>
+<p>This course will provide additional support for teachers who are working through a Storyline topic in the classroom. This course runs concurrently with Storyline II: Implementation and Design *Prerequisite: Storyline II</p>
+
+<h3>Storyline Refresher!</h3>
+<p>Structuring your Storyline units to meet state standards. Learn how to use specific benchmarks in your planning and write a new topic with the support of Storyline educators. *Prerequisite: Storyline I</p>
+
+<h3>Storyline Studio</h3>
+<p>Provides continued support for teachers who are using the Storyline method and the opportunity to collaborate with other Storyline teachers. An hour of each class will be devoted to individual or group work on the Storyline units they will be doing throughout the year. Participants will design and implement a joint action research project on the Storyline method.</p>
+
+<h3>Storyline Studio Revisited</h3>
+<p>This course provides ongoing support for teachers who are using the Storyline method in their classrooms. Participants will have the opportunity to collaborate with other Storyline teachers sharing ideas that have worked in their classrooms. This course runs concurrently with Storyline Studio. *Prerequisite: Storyline Studio</p>
+
+<h3>Storyline Alumni</h3>
+<p>This three day course is for people who have taken the Storyline I course and are looking for the opportunity to meet with other Storyline teachers to work on deepening their understanding of this way or working with children. Each year an element of the method will be explored, and participants will have the opportunity to write their own Storyline topic to use in their classrooms during the next school year. We will look at the many ways that the Storyline method can help teachers to design curriculum to meet the demands of state and district standards.</p>
+
+<h3>Principals' Conference</h3>
+<p>Supporting Teachers in the Storyline Method - An Insider's View. The Storyline Method is a dynamic way of integrating the curriculum that makes sense to children and gives teachers the tools to teach the curriculum in a way that is both meaningful and memorable. Successful use of this method is dependent on the support of a knowing administrator who understands how the method works and can provide a school climate that fosters this kind of learning. Participants will experience a Storyline topic firsthand and learn about how the method is structured. This will be a practical, hands-on course for administrators who want to enrich their role as instructional leaders in their schools.</p>
