--- a/links.html
+++ b/links.html
@@ -3,3 +3,17 @@ layout: default
 title: Links
 permalink: /links/
 ---
+
+<h1>Storyline - Related Links</h1>
+
+<p>Storyline Method in Scotland (EED):
+
+Storyline Scotland</p>
+
+<p>Highland School: A Storyline Magnet School in Bend Oregon:
+
+Scottish Storyline Method at Highland School</p>
+
+<p>Heinemann Educational Books:
+
+Creating Worlds, Constructing Meaning: The Scottish Storyline Method by Jeff Creswell</p>
