add all components to main page with some styling

--- a/index.html
+++ b/index.html
@@ -4,17 +4,49 @@ title: Home
 permalink: /
 ---
 <div class="main-page">
-  <h1>The Scottish Storyline Method</h1>
+  <div class="main-page__wrapper">
+    <div class="row main-page__column-wrapper">
+      <div class="col-md-5">
+        <h3 class="main-page__title">A note from Jeff Creswell:</h3>
 
-  <h3>A note from Jeff Creswell:</h3>
-  <h4>Registration available for the Portland and Prineville classes.See link below!</h4>
 
-  <h3>Storyline Courses</h3>
-  <h4>Storyline I: An Introduction & Storyline Revisited</h4>
+        <h4 class="main-page__note">Registration available for the Portland and Prineville classes. See link below!</h4>
 
-  <p>Are you ready to learn what makes the Storyline Method so successful in the classroom?
+        <h3 class="main-page__title">Storyline Courses</h3>
 
-  The Storyline I: An Introduction course is for K-12 teachers who wish to learn how to integrate curriculum using the Storyline method.  Participants will experience a Storyline unit both as a student in the process, as well as observer of the teaching method.  Explore how and why the Storyline method motivates students to learn as they become their own ‘meaning makers.’
+        <h4 class="main-page__course-title">Storyline I: An Introduction & Storyline Revisited</h4>
 
-  Storyline Revisited is for you if you’d like a refresher!  This course is run concurrently with the introductory course and provides a refresher for people who are looking for the support and would like to create a new Storyline topic.</p>
+        <div class="main-page__course-body">
+          <p >Are you ready to learn what makes the Storyline Method so successful in the classroom?
+
+          <p>The Storyline I: An Introduction course is for K-12 teachers who wish to learn how to integrate curriculum using the Storyline method.  Participants will experience a Storyline unit both as a student in the process, as well as observer of the teaching method.  Explore how and why the Storyline method motivates students to learn as they become their own ‘meaning makers.’</p>
+
+          <p>Storyline Revisited is for you if you’d like a refresher!  This course is run concurrently with the introductory course and provides a refresher for people who are looking for the support and would like to create a new Storyline topic.</p>
+
+
+        </div>
+
+      </div>
+      <div class="col-md-1">
+
+      </div>
+      <div class="col-md-5 main-page__course-links">
+        <h2>2021 - Storyline Course Information</h2>
+        <h3>Storyline I: An Introduction Storyline I: Revisited</h3>
+        <div class="main-page__prineville-link">
+          <h3>PRINEVILLE, OR</h3>
+          <h3>August 9-13, 2021</h3>
+          <h3>Steins Pillar Elementary</h3>
+          <h4>Click here for registration details!</h4>
+        </div>
+        <div class="main-page__portland-link">
+          <h3>PORTLAND, OR</h3>
+          <h3>August 16-20, 2021</h3>
+          <h3>Calvary Presbyterian Church</h3>
+          <h4>Click here for registration details!</h4>
+        </div>
+      </div>
+    </div>
+
+  </div>
 </div>
